# price-extractor-client

./: .gitignore  README.md  iniciar-painel.bat  parar-painel.bat  pyproject.toml  run-backend.bat  run-frontend.bat
.github/workflows/: daily-run.yml
app/: __init__.py  cli.py  cockpit_api.py  db.py  fallback_server.py  global_state_store.py  notebook_bridge.py  repository.py  review_service.py  runner.py  scheduler.py  settings.py  upload_api.py  web.py
app/static/: styles.css
app/templates/: base.html  dashboard.html  global_catalog.html  global_mappings.html  global_review.html  review.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: BMPill.jsx  Btn.jsx  CockpitTab.jsx  SkuPicker.jsx  StatusPill.jsx  Table.jsx  UploadTab.jsx
